# safelatticeplanning

./: .gitignore  README.md  ablation.py  create_results.py  dev_env.sh  sdmp.py  sdmp_parameters.yaml
images/lattice_planner/: Dockerfile
images/lattice_planner_improved/: Dockerfile
images/rrt_star/: Dockerfile
images/visualization/: Dockerfile
lattice_planner/: terminate.sh
lattice_planner/catkin_ws/: srg.rosinstall
lattice_planner/catkin_ws/src/LatticePlanner/: CMakeLists.txt  package.xml
lattice_planner/catkin_ws/src/LatticePlanner/generate_primitives/config/: lattice_group5.txt  lattice_group6.txt  lattice_group8.txt
lattice_planner/catkin_ws/src/LatticePlanner/generate_primitives/primitives/: primitive_group_10_id_0.txt  primitive_group_10_id_1.txt  primitive_group_10_id_10.txt  primitive_group_10_id_11.txt  primitive_group_10_id_16.txt  primitive_group_10_id_5.txt  primitive_group_11_id_29.txt  primitive_group_11_id_3.txt  primitive_group_11_id_33.txt  primitive_group_11_id_5.txt  primitive_group_11_id_8.txt  primitive_group_11_id_9.txt  primitive_group_12_id_0.txt  primitive_group_12_id_19.txt  primitive_group_12_id_22.txt  primitive_group_12_id_4.txt  primitive_group_12_id_5.txt  primitive_group_12_id_6.txt  primitive_group_13_id_12.txt  primitive_group_13_id_13.txt  primitive_group_13_id_2.txt  primitive_group_13_id_5.txt  primitive_group_14_id_1.txt  primitive_group_14_id_11.txt  primitive_group_14_id_7.txt  primitive_group_14_id_8.txt  primitive_group_1_id_2.txt  primitive_group_1_id_9.txt  primitive_group_2_id_14.txt  primitive_group_2_id_3.txt  primitive_group_2_id_5.txt  primitive_group_333_id_5.txt  primitive_group_3_id_0.txt  primitive_group_3_id_1.txt  primitive_group_3_id_26.txt  primitive_group_3_id_27.txt  primitive_group_3_id_8.txt  primitive_group_4_id_19.txt  primitive_group_4_id_20.txt  primitive_group_4_id_26.txt  (+23 more)
lattice_planner/catkin_ws/src/LatticePlanner/generate_primitives/src/: ACADODjiMatrice.cpp  State.cpp  main.cpp
lattice_planner/catkin_ws/src/LatticePlanner/include/: Hitbox.h  LatticePlanner.h  Logger.h  Obstacle.h  Profiler.h  Scenario.h  latticePlanner_node.h
lattice_planner/catkin_ws/src/LatticePlanner/include/Search/: SearchState.h
lattice_planner/catkin_ws/src/LatticePlanner/include/UAV/: MotionPrimitive.h
lattice_planner/catkin_ws/src/LatticePlanner/launch/: lattice_planner.launch  lattice_planner_2.launch  lattice_planner_simple.launch  lattice_planner_valgrind.launch
lattice_planner/catkin_ws/src/LatticePlanner/msg/: plantime.msg
lattice_planner/catkin_ws/src/LatticePlanner/src/: .#latticePlanner_node.c  LatticePlanner.cpp  Obstacle.cpp  PhysicalEnvironment.cpp  Scenario.cpp  latticePlanner_node.cpp
lattice_planner/catkin_ws/src/LatticePlanner/src/UAV/: MotionPrimitive.cpp
lattice_planner/catkin_ws/src/simulator-specifications/: CMakeLists.txt  README.md  package.xml
lattice_planner/catkin_ws/src/simulator-specifications/launch/: exhibition_dynamic.launch  field_static.launch  granso2_dynamic.launch  laser_assembly.launch  octomap_mapping.launch  octomap_mapping_load_map.launch  path_generator.launch  rays_dynamic.launch  simulation.launch  spawn_m100.launch  tunnel_dynamic.launch
lattice_planner/catkin_ws/src/simulator-specifications/rviz/: srg.rviz
lattice_planner/catkin_ws/src/simulator-specifications/src/: spawn_drone.py
lattice_planner/catkin_ws/src/simulator-specifications/src/scripted_motion/: scripted_motion_none.h
lattice_planner/catkin_ws/src/simulator-specifications/worlds/: granso_dynamic.world
lattice_planner/start_scripts/: start_lattice_planner.sh  start_rviz.sh
lattice_planner_improved/: .bashrc
lattice_planner_improved/.rviz/: persistent_settings
lattice_planner_improved/catkin_ws/: .gitignore
lattice_planner_improved/data/: collision.csv  intervals.csv  logfile.csv  summary.csv
lattice_planner_improved/start_scripts/: catkin_build.sh  check_nav_goal_reached.sh  send_nav_goal.sh  spawn_dji100.sh  start_gazebo2rviz.sh  start_lattice_planner.sh  start_rrt_star.sh  start_scenario.sh
rrt_star/: .bash_history  .python_history
rrt_star/catkin_ws/src/SetupScenario/generate_primitives/: CMakeLists.txt  README.md
rrt_star/catkin_ws/src/SetupScenario/generate_primitives/config/: lattice_group11.txt  lattice_group14.txt
rrt_star/catkin_ws/src/SetupScenario/generate_primitives/include/: GridPoint.h  MotionPrimitiveGeneration.h  Trajectory.h
rrt_star/catkin_ws/src/SetupScenario/generate_primitives/matlab_plotting/: generated_plot.eps  generated_plot_g2id13.eps  generated_plot_g2id13_2.eps  primitives_from_vxyz_0.eps
rrt_star/catkin_ws/src/SetupScenario/generate_primitives/primitives/: primitive_group_10_id_2.txt  primitive_group_10_id_21.txt  primitive_group_10_id_27.txt  primitive_group_10_id_28.txt  primitive_group_10_id_29.txt  primitive_group_10_id_4.txt  primitive_group_10_id_6.txt  primitive_group_10_id_8.txt  primitive_group_11_id_0.txt  primitive_group_11_id_11.txt  primitive_group_11_id_12.txt  primitive_group_11_id_16.txt  primitive_group_11_id_26.txt  primitive_group_11_id_27.txt  primitive_group_11_id_28.txt  primitive_group_12_id_18.txt  primitive_group_12_id_3.txt  primitive_group_12_id_8.txt  primitive_group_13_id_15.txt  primitive_group_13_id_3.txt  primitive_group_14_id_12.txt  primitive_group_14_id_15.txt  primitive_group_14_id_3.txt  primitive_group_14_id_4.txt  primitive_group_1_id_0.txt  primitive_group_1_id_5.txt  primitive_group_2_id_4.txt  primitive_group_2_id_7.txt  primitive_group_333_id_0.txt  primitive_group_333_id_2.txt  primitive_group_333_id_7.txt  primitive_group_333h_id_5.txt  primitive_group_333h_id_6.txt  primitive_group_333h_id_7.txt  primitive_group_3_id_10.txt  primitive_group_3_id_14.txt  primitive_group_3_id_15.txt  primitive_group_3_id_19.txt  primitive_group_4_id_0.txt  primitive_group_4_id_11.txt  (+28 more)
rrt_star/catkin_ws/src/laser_to_pcl/: CMakeLists.txt
time_based_rrt/catkin_ws/src/Converter_mavDjiSDK/: CMakeLists.txt  package.xml
visualization/: run.sh  visualize_ablation.py  visualize_sdmp.py
(+440 files in other folders)
