<?xml version="1.0"?>
<package>
  <name>lattice_planner</name>
  <version>0.0.0</version>
  <description>The lattice planner package</description>
   <maintainer email="oskar.ljungqvist@liu.se">Oskar Ljungqvist</maintainer>

  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>catkin_simple</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>	
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap</build_depend>

  <!-- <build_depend>trajectory_msgs</build_depend> -->

  <run_depend>catkin_simple</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>	
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>octomap</run_depend>
  <!-- <run_depend>trajectory_msgs</run_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
